# MicrowaveInversion

./: .gitignore  README.md  README.rst  azure-pipelines.yml  difference_analysis.py  requirements.txt  setup.cfg
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml  azure-pipelines-win.yml
example/: example_model_Tx0.in  example_model_geometry.txt  geometry.hdf5  image_domain.json  measurement_config.json  model_config.json  model_config_small.json
example/gprMax/example_model_Tx000_snaps/: snapshot2.vti  snapshot3.vti
example/gprMax/output/: example_model_Tx000.out
models/example/example_model/: example_model_geometry.h5
models/example_model/: example_model_Tx0.in  example_model_Tx1.in  example_model_Tx2.in  example_model_Tx3.in  example_model_geometry.h5
mwi/: __init__.py
mwi/cli/: inverse.py  inverse_MoM.py  inverse_image.py  sim_measurement.py
mwi/util/: calc.py  constants.py  debye_model.py  dispersive_models.py  hydration_model.py  image_domain.py  model.py  mom.py  read_config.py  read_gprMax.py  rx.py  sim.py  sim4life_to_numpy.py
tests/util/: test_calc.py  test_image_domain.py  test_model.py  test_package_version.py  test_read_config.py  test_read_gprMax.py  test_rx.py  test_sim.py
