[metadata]
name = mwi
author = Brendon Besler
author-email = brendon.besler@ucalgary.ca
summary = Algorithms for inverse microwave tomography.
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/b-besler/MicrowaveInversion
project_urls =
    Source Code = https://github.com/b-besler/MicrowaveInversion
license = Apache-2
classifier =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    Programming Language :: Python
keywords =
    medical
    imaging
    microwave

#[entry_points]
#console_scripts =
#    aimod = bonelab.cli.aimod:main


[pbr]
skip_changelog = 1
skip_authors = 1